--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "cstdlib": "c",
-        "cctype": "c"
+        "cctype": "c",
+        "*.tcc": "c"
     }
 }
